# CanDo

./: .gitignore  CMakeLists.txt  Makefile  Readme.md  cando  test_os.cdo
.github/workflows/: ci.yml
assets/: gen_icon.py
docs/: AI-GUIDE.md  README.md  architecture.md  c-api.md  cli.md  creating-platforms.md  draw.md  embedding.md  forms.md  getting-started.md  jit-internals.md  jit-plan.md  jit.md  language-reference.md  metamethods.md  native-api.md  new-libraries.md  object-system.md  parser-compiler.md  patterns.md  socket.md  sql.md  standard-library.md  streaming.md  threading.md  user-guide.md  value-types.md  vm-internals.md  window.md  writing-a-module.md  writing-extensions.md  yaml.md
docs/api/: README.md  embedding.md  extensions.md  reference.md
docs/internals/: README.md  architecture.md  cffi-module-plan.md  jit.md  parser.md  value-system.md  vm.md
docs/language/: README.md  classes.md  error-handling.md  expressions.md  functions.md  modules.md  pipes.md  statements.md  syntax.md  threading.md  types.md
docs/libraries/: README.md  app.md  array.md  console.md  crypto.md  csv.md  datetime.md  eval.md  file.md  gc.md  globals.md  http.md  https.md  include.md  jit.md  json.md  math.md  meta.md  net.md  object.md  os.md  process.md  secure_socket.md  socket.md  stream.md  string.md  thread.md  yaml.md
editors/vscode-cando/: .gitignore  .vscodeignore  CHANGELOG.md  LICENSE  README.md  language-configuration.json  package.json
editors/vscode-cando/client/: tsconfig.json
editors/vscode-cando/client/src/: extension.ts
editors/vscode-cando/server/src/: analyze.ts  analyzer.ts  ast.ts  builtins.ts  crossfile.ts  docparse.ts  doctypes.ts  infer.ts  lexer.ts  manifest.ts  parser.ts  paths.ts  scope.ts  server.ts  types.ts  typesys.ts  workspace.ts
editors/vscode-cando/server/test/: edge_cases.js  runner.js
editors/vscode-cando/snippets/: cando.code-snippets
editors/vscode-cando/syntaxes/: cando.tmLanguage.json
include/: cando.h
modules/: README.md
modules/cffi/: Makefile  PLAN.md  README.md  cando.api.json  cffi_module.c  cffi_types.h  test_cffi.c  test_cffi.cdo  test_cffi_smoke.cdo
modules/draw/: .gitignore  Makefile  README.md  cando.api.json  draw_module.c  test_draw.c  test_draw.cdo  test_draw_smoke.cdo
modules/forms/: .gitignore  API_SPEC.md  Makefile  README.md  REWRITE_PLAN.md  cando.api.json  forms_module.c  test_forms.c  test_forms.cdo  test_forms_smoke.cdo
modules/forms/script/: forms_util.cdo
modules/forms/src/controls/: ctl_checkbox.c  ctl_checkbox.h  ctl_common.c  ctl_common.h  ctl_flowlayout.c  ctl_flowlayout.h  ctl_form.c  ctl_form.h  ctl_listbox.c  ctl_listbox.h  ctl_listview.c  ctl_listview.h  ctl_numeric.c  ctl_numeric.h  ctl_progress.c  ctl_progress.h  ctl_scrollpanel.c  ctl_scrollpanel.h  ctl_splitter.c  ctl_splitter.h  ctl_tabcontrol.c  (+9 more)
modules/ldap/: Makefile  README.md  cando.api.json  ldap_adcrypt.h  ldap_helpers.h  ldap_module.c  test_ldap.c  test_ldap.cdo  test_ldap_smoke.cdo
modules/smtp/: Makefile  README.md  cando.api.json  dkim.h  dns.h  mime.h  smtp_helpers.h  smtp_module.c  spf.h  storage.h  test_smtp.c  test_smtp.cdo  test_smtp_smoke.cdo
modules/sql/: Makefile  README.md  cando.api.json  sql_buf.h  sql_crypto.h  sql_driver.h  sql_escape.h  sql_module.c  sql_mysql.c  sql_mysql.h  sql_net.h  sql_pg.c  sql_pg.h  sql_placeholder.h  test_sql.c  test_sql.cdo  test_sql_smoke.cdo
modules/sqlite/: .gitignore  Makefile  README.md  cando.api.json  sqlite_helpers.h  sqlite_module.c  test_sqlite.c  test_sqlite.cdo  test_sqlite_smoke.cdo
modules/window/: .gitignore  Makefile  README.md  cando.api.json  test_window.c  test_window.cdo  test_window_smoke.cdo  window_module.c
source/: cando_lib.c  icon.rc  main.c  natives.c  natives.h
source/compat/: win_regex.c  win_regex.h
source/core/: common.c  common.h  handle.c  handle.h  lock.c  lock.h  memory.c  memory.h  thread_platform.c  thread_platform.h  value.c  value.h
source/jit/: codegen.c  codegen.h  hot.c  hot.h  ir.c  ir.h  jit.c  jit.h  mcode.c  mcode.h
source/lib/: app.c  app.h  array.c  array.h  console.c  console.h  console_dispatch.c  console_dispatch.h  console_events.c  console_events.h  console_input.c  console_input.h  console_lineedit.c  console_lineedit.h  console_term.c  console_term.h  crypto.c  crypto.h  csv.c  csv.h  datetime.c  datetime.h  eval.c  eval.h  file.c  file.h  gc.c  gc.h  http.c  http.h  https.c  https.h  httputil.c  httputil.h  include.c  include.h  jit.c  jit.h  json.c  json.h  (+28 more)
source/object/: array.c  array.h  class.c  class.h  function.c  function.h  object.c  object.h  string.c  string.h  thread.c  thread.h  value.c  value.h
source/parser/: lexer.c  lexer.h  parser.c  parser.h  token.h
source/vm/: bridge.c  bridge.h  chunk.c  chunk.h  debug.c  debug.h  opcodes.c  opcodes.h  vm.c  vm.h
tests/: test_console.c  test_core  test_core.c  test_crypto  test_crypto.c  test_jit_hot.c  test_jit_ir  test_jit_ir.c  test_jit_mcode.c  test_lexer  test_lexer.c  test_object  test_object.c  test_parser  test_parser.c  test_sockutil.c  test_thread  test_thread.c  test_vm  test_vm.c  test_yaml.c
tests/bench/: fib.cdo  loops.cdo  mandelbrot.cdo  nbody.cdo  run_bench.sh
tests/error_reports/: evaluation.md  report.txt
tests/integration/: run_error_tests.sh  run_tests.sh
tests/scripts/: also.cdo  arithmetic.cdo  arrays.cdo  break_continue.cdo  caught_thread_error.cdo  closures.cdo  comparison.cdo  eval.cdo  for_loops.cdo  for_loops_extra.cdo  for_over.cdo  functions.cdo  if_else.cdo  include.cdo  include_16.cdo  include_ext.cdo  inline_functions.cdo  inspect.cdo  jit_recorder.cdo  lib_args.cdo  lib_array.cdo  lib_crypto.cdo  lib_csv.cdo  lib_datetime.cdo  lib_enhance.cdo  lib_http.cdo  lib_meta.cdo  lib_object.cdo  lib_os.cdo  lib_secure_socket.cdo  lib_socket.cdo  lib_stream.cdo  lib_sys.cdo  lib_yaml.cdo  math_lib.cdo  meta_call.cdo  metamethods.cdo  method_call.cdo  new_syntax.cdo  objects.cdo  (+25 more)
tests/scripts/modules/: constants.cdo  counter.cdo  data.json  data.yaml  greeting.cdo  multi_16.cdo  people.csv  test_cert.cdo
(+140 files in other folders)
